# csr-local-storage-todo

./: Cargo.toml  README.md
src/: app.rs  main.rs
