[package]
name = "csr_local_storage_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6.12", features = ["nightly", "csr"] }
leptos_router = { version = "0.6.12", features = ["csr"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Storage"]